18-Oct-2011 Issue 52. Fixed Gcc include-fixed paths.

04-Oct-2011 Used some OpenCL preprocessor magic (__NO_STD_VECTOR) to avoid the use of std::vector in the test program. Also added support to the test if there was a GPU OpenCL device but not a CPU device.

02-Oct-2011 Issue 49. Added EnableAutoImport linker option to Mingw. See http://sourceware.org/binutils/docs-2.16/ld/WIN32.html

02-Oct-2011 Issue 48. Scheduler updates are now reported via a C# event and only when percentage completion has changed.

02-Oct-2011 Fixed Mingw-4.5.0 compilation.

02-Oct-2011 Removing obsolete spaces at the end of command line arguments.

25-Sep-2011 Issue 40. VisualStudio 2010 source files in the IDE Solution Explorer appeared as a flat list. Opus now generates .vcxproj.filters files alongside the project files to remedy this.

25-Sep-2011 Issue 47. If the Windows SDK (6.0A) is not found, then the VisualStudio install path is searched for a PlatformSDK. This is really only suitable for VisualStudio 8.

20-Sep-2011 Issue 46. Fixing env.bat for Windows to expand the original PATH correctly.

20-Sep-2011 Disabled VisualC browse information generation for all build types. This improves performance of builds. Assuming Intellisense provides most features required if no other VisualStudio addins are used.

17-Sep-2011 Set version to 0.40.

--------------------------------------------------------------------------------

v0.30
=====

15-Sep-2011 Issue 44. Fixing missing spaces in generated Makefiles causing errors.

15-Sep-2011 Issue 43. OSX 64-bit targets with GCC now pass -m64.

13-Sep-2011 Fixing PATH expansion in the Windows environment batch file when there are spaces.

11-Sep-2011 Issue 35. Fixed unexpected exception when using AddRelativeFiles with a leaf name that does not exist.

11-Sep-2011 Output the 'CumulativeTotal' row of the timing table, as an indication if the breakdown of the process differs from the timed total.
