@@ -1,0 +1,15 @@
+// <copyright file="ArchiverOptionCollection.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>Gcc package</summary>
+// <author>Mark Final</author>
+namespace Gcc
+{
+    public sealed partial class ArchiverOptionCollection : GccCommon.ArchiverOptionCollection
+    {
+        public ArchiverOptionCollection(Opus.Core.DependencyNode node)
+            : base(node)
+        {
+        }
+    }
+}
