@@ -1,0 +1,15 @@
+// <copyright file="CCompilerOptionEnums.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>Gcc package</summary>
+// <author>Mark Final</author>
+namespace Gcc
+{
+    public enum EVisibility
+    {
+        Default,
+        Internal,
+        Hidden,
+        Protected
+    }
+}
