@@ -1,0 +1,15 @@
+// <copyright file="CPlusPlusCompiler.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>Gcc package</summary>
+// <author>Mark Final</author>
+namespace Gcc
+{
+    public sealed class CPlusPlusCompiler : CCompiler
+    {
+        public CPlusPlusCompiler(Opus.Core.Target target)
+            : base(target)
+        {
+        }
+    }
+}
