@@ -1,0 +1,20 @@
+// <copyright file="ToolchainOptionCollection.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>Gcc package</summary>
+// <author>Mark Final</author>
+namespace Gcc
+{
+    public sealed partial class ToolchainOptionCollection : GccCommon.ToolchainOptionCollection
+    {
+        public ToolchainOptionCollection()
+            : base()
+        {
+        }
+
+        public ToolchainOptionCollection(Opus.Core.DependencyNode node)
+            : base(node)
+        {
+        }
+    }
+}
