@@ -1,3 +1,5 @@
+21-Dec-2011 Adding Gcc-4.6 support for Linux. A new include path under /usr/include needed to be added.
+
 18-Oct-2011 Issue 52. Fixed Gcc include-fixed paths.
 
 04-Oct-2011 Used some OpenCL preprocessor magic (__NO_STD_VECTOR) to avoid the use of std::vector in the test program. Also added support to the test if there was a GPU OpenCL device but not a CPU device.
